@@ -2,6 +2,7 @@
 
 define('YII_ENABLE_EXCEPTION_HANDLER',false);
 define('YII_ENABLE_ERROR_HANDLER',false);
+define('YII_DEBUG',true);
 $_SERVER['SCRIPT_NAME']='/'.basename(__FILE__);
 $_SERVER['SCRIPT_FILENAME']=__FILE__;
 
